# auto-example-table

./: .pre-commit-hooks.yaml  license  pyproject.toml  readme.md
auto_example_table/: cli.py  consts.py  html.py  log.py  table.py
